# mydocs

./: .gitignore  404.html  CNAME  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
android/Android资源/: index.html
android/Fastboot刷机/: index.html
docker/container_cmd/: index.html
docker/vscode-docker-dev_v1/: index.html
docker/vscode-docker-dev_v2/: index.html
docker/vscode-docker-dev_v3/: index.html
docs/: index.md
docs/android/: Android资源.md  Fastboot刷机.md
docs/docker/: container_cmd.md  vscode-docker-dev_v1.md  vscode-docker-dev_v2.md  vscode-docker-dev_v3.md
docs/golang/: GO的环境变量.md
docs/linux/: Debian10通过kubeadm部署Kubernetes集群.md  Debian安装和配置Docker.md  Debian安装和配置MariaDB.md  Debian安装和配置PostgreSQL.md  Debian安装和配置Postgres.md  Debian网络管理.md  Linux下格式化U盘及重建分区.md  Linux下自动挂载U盘.md  Linux下解压Windows压缩的ZIP文件后乱码的解决办法.md  Linux杂记.md  Mihomo安装笔记.md  RHEL7.3的Jira安装与破解教程.md  U盘格式化分区自动挂载.md  apt国内源.md  别名.md  安装mysqlclient和psycopg2报错.md  挂载ISO镜像做本地源.md  源码编译MySQL5.7记录.md  玩客云.md  盒子设备.md  解压ZIP乱码.md  配置IP和DNS.md  配置UV使用国内源.md
docs/mac/: MacOS软件.md  Mac安装Office并激活.md  UTM安装Windows.md  使用lima实现docker.md  分析brew无用的包.md  命令行配置Mac代理.md  设置Mac的Hostname.md
docs/mysql/: MySQL之Explain.md  MySQL之Explain详解.md  MySQL之优化.md  MySQL事务及隔离级别与锁机制.md  MySQL常用语句和命令.md  MySQL时区.md  MySQL索引.md  MySQL索引的数据结构.md  MySQL语句执行过程.md
docs/others/: Git常用命令.md  Iptables.md  PostgreSQL常用命令.md  Redis持久化.md  Supervisor示例.md  V2ray+Trojan配置.md  VSCode免密发布代码到GitHub.md  下载Chrome离线安装包.md
docs/python/: Flask上下文.md  PIP.md  Python资源索引.md  变量名称中的下划线.md
docs/soft/: VSCode免密发布代码到GitHub.md  vscode+docker+dev.md  vscode+docker+python.md  魔兽3冰封王座的下载地址.md
docs/travel/: 烟台长岛.md
docs/windows/: Hyper-v Linux虚拟机全屏.md  KMS激活.md  WSL使用Debian启动Docker报错.md  WSL快捷配置代理.md  WSL服务批量管理.md  WSL端口转发.md  删除3D对象.md  手动安装WSL.md  (+4 more)
search/: search_index.json
(+169 files in other folders)
